Create little js file for example features. Can be included to any html file for showing an example feature

--- a/boilerplate.html
+++ b/boilerplate.html
@@ -5,6 +5,7 @@
 	<title>JavaScript for Analysts</title>
 	<!-- jQuery loaded from Google's CDN -->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script type="text/javascript" src="js/example_features/access_properties_with_array_syntax.js"></script>
 </head>
 <body>
 	<h1>JavaScript for Analysts</h1>
