--- a/boilerplate.html
+++ b/boilerplate.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>JavaScript for Analysts</title>
+	<link type='text/css' rel='stylesheet' href='css/styles.css' />
 	<!-- jQuery loaded from Google's CDN -->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script type="text/javascript" src="js/example_features/access_properties_with_array_syntax.js"></script>
