--- a/examples/ajax_example.html
+++ b/examples/ajax_example.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>jQuery plugin</title>
+	<title>jQuery Ajax</title>
 	<link type='text/css' rel='stylesheet' href='../css/styles.css' />
 	<link type='text/css' rel='stylesheet' href='../css/liquidcarousel.css' />
 </head>
