--- a/examples/jquery_plugin_carousel.html
+++ b/examples/jquery_plugin_carousel.html
@@ -62,8 +62,6 @@
 	<span class="next"></span>
 </div>
 
-<span class="sac">To see this plugin in action, just resize this window...</span>
-
 <p>Include the jQuery library and the liquid plugin:</p>
 <pre>
 &lt;script type="text/javascript" src="js/lib/jquery.js"&gt;&lt;/script&gt;
@@ -98,6 +96,6 @@ $(document).ready(function() {
 	});
 });
 </pre>
-
+<p style="height:800px">&nbsp;</p>
 </body>
 </html>
