--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -42,14 +42,49 @@
 						<small>Wilhelm Eklund [wilhelm.eklund@netlight.com] <br />
 							&& Anders Bäck [anders.back@netlight.com]</small>
 					</p>
+					<p style="height:200px">&nbsp;</p>
 				</section>
 
 				<section>
+					<h2>What is JavaScript?</h2>
+					<ul>
+						<li class="fragment">Script</li>
+						<li class="fragment">(Mostly) Web</li>
+					</ul>
+					<p style="height:200px">&nbsp;</p>
+				</section>
+
+				<section>
+					<h2>Why use JavaScript?</h2>
+					<ul>
+						<li class="fragment">Interaction and behaviour</li>
+						<li class="fragment">It's cool!</li>
+					</ul>
+					<p style="height:200px">&nbsp;</p>
+				</section>
+
+				<section>
+					<h2></h2>
+					<p>
+					</p>
+					<p style="height:200px">&nbsp;</p>
+				</section>
+
+				<section id="jquery_plugin">
 					<iframe src="../examples/jquery_plugin_carousel.html" height="100%" width="100%">
 					</iframe>
 
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+					</aside>
+				</section>
+
+				<section id="ajax">
+					<iframe src="../examples/ajax_example.html" height="100%" width="100%">
+					</iframe>
+
+					<aside class="notes">
+						Notes on the Ajax presentation.
 					</aside>
 				</section>
 
