Changes to presentation index page

--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -70,6 +70,28 @@
 					<p style="height:200px">&nbsp;</p>
 				</section>
 
+				<section>
+					<h1>jQuery</h1>
+					<ul>
+						<li class="fragment">Framework</li>
+						<li class="fragment">Document manipulation</li>
+						<li class="fragment">Event listeners</li>
+						<li class="fragment"><h2>Plugins!</h2></li>
+					</ul>
+					<p style="height:200px">&nbsp;</p>
+				</section>
+
+				<section>
+					<h2>jQuery plugin structure</h2>
+					<p>Extentions of jQuery</p>
+					<ol class="fragment">
+						<li>Include jQuery and the plugin (in that order)</li>
+						<li>Create HTML structure according to what your plugin wants</li>
+						<li>Initiate the plugin using $('.selectorOfHtmlStructure').nameOfMyPlugin(optionsObject)</li>
+					</ol>
+					<p style="height:200px">&nbsp;</p>
+				</section>
+
 				<section id="jquery_plugin">
 					<iframe src="../examples/jquery_plugin_carousel.html" height="100%" width="100%">
 					</iframe>
