--- a/boilerplate.html
+++ b/boilerplate.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8">
 	<title>JavaScript for Analysts</title>
 	<link type='text/css' rel='stylesheet' href='css/styles.css' />
-	<!-- jQuery loaded from Google's CDN -->
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script type="text/javascript" src="../js/lib/jquery.js"></script>
 	<script type="text/javascript" src="js/example_features/access_properties_with_array_syntax.js"></script>
 </head>
 <body>
