--- a/examples/ajax_example.html
+++ b/examples/ajax_example.html
@@ -26,8 +26,7 @@
 </div>
 
 
-<!-- jQuery loaded from Google's CDN -->
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript" src="../js/lib/jquery.js"></script>
 <script type="text/javascript">
 	$(document).ready(function() {
 		console.info("Ajax example");
