--- a/examples/jquery_plugin_carousel.html
+++ b/examples/jquery_plugin_carousel.html
@@ -5,19 +5,8 @@
 	<title>jQuery plugin</title>
 	<link type='text/css' rel='stylesheet' href='../css/styles.css' />
 	<link type='text/css' rel='stylesheet' href='../css/liquidcarousel.css' />
-	<!-- jQuery loaded from Google's CDN -->
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script type="text/javascript" src="../js/lib/jquery.js"></script>
 	<script type="text/javascript" src="../js/lib/jquery.liquidcarousel.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function() {
-			console.log("Plugin is initiated when document is loaded and ready");
-			$('#image_slider').liquidcarousel({
-				height:129,
-				duration:500,
-				hidearrows:false
-			});
-		});
-	</script>
 </head>
 <body>
 	<h1>jQuery Plugin: "Liquid Carousel" image slider</h1>
@@ -97,5 +86,16 @@ $(document).ready(function() {
 });
 </pre>
 <p style="height:800px">&nbsp;</p>
+
+<script type="text/javascript">
+		$(document).ready(function() {
+			console.log("Plugin is initiated when document is loaded and ready");
+			$('#image_slider').liquidcarousel({
+				height:129,
+				duration:500,
+				hidearrows:false
+			});
+		});
+	</script>
 </body>
 </html>
