--- a/presentation/index.html
+++ b/presentation/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>JavaScript for Analysts</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -37,7 +37,6 @@
 
 				<section>
 					<h1>JavaScript for Analysts</h1>
-					<h3>Introduction to the cool part of web development!</h3>
 					<p>
 						<small>Wilhelm Eklund [wilhelm.eklund@netlight.com] <br />
 							&& Anders Bäck [anders.back@netlight.com]</small>
@@ -64,9 +63,7 @@
 				</section>
 
 				<section>
-					<h2></h2>
-					<p>
-					</p>
+					<h2>Clientside vs Serverside</h2>
 					<p style="height:200px">&nbsp;</p>
 				</section>
 
@@ -89,6 +86,7 @@
 						<li>Create HTML structure according to what your plugin wants</li>
 						<li>Initiate the plugin using $('.selectorOfHtmlStructure').nameOfMyPlugin(optionsObject)</li>
 					</ol>
+
 					<p style="height:200px">&nbsp;</p>
 				</section>
 
@@ -108,6 +106,17 @@
 					<aside class="notes">
 						Notes on the Ajax presentation.
 					</aside>
+				</section>
+
+				<section>
+					<h2>Debugging JavaScript</h2>
+					 <ol>
+						<li class="fragment">breakpoints</li>
+						<li class="fragment">logging</li>
+					</ol>
+					<pre class="fragment"><code contenteditable>console.log("title", var1, var2);</code></pre>
+
+					<p style="height:200px">&nbsp;</p>
 				</section>
 
 				<!-- Example of nested vertical slides -->
@@ -405,7 +414,7 @@ function linkify( selector ) {
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
 				controls: true,
-				progress: true,
+				progress: false,
 				history: true,
 				center: true,
 
