Tested adding another copy of the jquery plugin, vertically

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -141,13 +141,24 @@ null == undefined   // true
 					<p style="height:200px">&nbsp;</p>
 				</section>
 
-				<section id="jquery_plugin">
-					<iframe src="../examples/jquery_plugin_carousel.html" height="100%" width="100%">
-					</iframe>
+				<section>
+					<section id="jquery_plugin">
+						<iframe src="../examples/jquery_plugin_carousel.html" height="100%" width="100%">
+						</iframe>
 
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
+						<aside class="notes">
+							Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+						</aside>
+					</section>
+
+					<section id="jquery_plugin2">
+						<iframe src="../examples/jquery_plugin_carousel.html" height="100%" width="100%">
+						</iframe>
+
+						<aside class="notes">
+							Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+						</aside>
+					</section>
 				</section>
 
 				<section id="ajax">
