Added the mandatory McGuyver picture

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -124,9 +124,19 @@ null == undefined   // true
 					<p style="height:200px">&nbsp;</p>
 				</section>
 
-				<section id="jquery_example">
-					<iframe src="../examples/jquery_example.html" height="100%" width="100%">
-					</iframe>
+				<section>
+					<section id="jquery_example">
+						<iframe src="../examples/jquery_example.html" height="100%" width="100%">
+						</iframe>
+					</section>
+
+					<section>
+						<h2>CSS Selectors</h2>
+						<ul>
+							<li>id: $('#myId')</li>
+							<li>class: $('.myClass')</li>
+						</ul>
+					</section>
 				</section>
 
 				<section>
@@ -145,19 +155,20 @@ null == undefined   // true
 					<section id="jquery_plugin">
 						<iframe src="../examples/jquery_plugin_carousel.html" height="100%" width="100%">
 						</iframe>
-
-						<aside class="notes">
-							Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-						</aside>
 					</section>
 
 					<section id="jquery_plugin2">
-						<iframe src="../examples/jquery_plugin_carousel.html" height="100%" width="100%">
-						</iframe>
-
-						<aside class="notes">
-							Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-						</aside>
+						<h2>Thousand of plugins!</h2>
+						<ul class="fragment">
+							<li>Steel with pride!</li>
+							<li>Open source licensed</li>
+							<li>Speed up delivery</li>
+							<li>
+								Look like a Pro
+								<br />
+								<img src="../img/mcguyver.jpg" class="image fragment">
+							</li>
+						</ul>
 					</section>
 				</section>
 
