Moved som sections

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -51,6 +51,10 @@
 						<li class="fragment">Anything Web Related</li>
 						<li class="fragment">Grow as a developer</li>
 					</ul>
+
+					<aside class="notes">
+						This is why!
+					</aside>
 				</section>
 
 				<section>
@@ -58,7 +62,13 @@
 					<ul>
 						<li class="fragment">Netlighters with no background in js</li>
 						<li class="fragment">Some background in HTML and CSS</li>
-                        <li class="fragment">Basic Syntax/ Funny JS Features</li>
+                    </ul>
+				</section>
+
+				<section>
+					<h2>What will we do today?</h2>
+					<ul>
+						<li class="fragment">Basic Syntax/ Funny JS Features</li>
                         <li class="fragment">Which IDE should I use ?</li>
                         <li class="fragment">How do you debug JS ?</li>
                         <li class="fragment">What is JQuery ?</li>
@@ -73,26 +83,35 @@
                     <ul>
                         <li class="fragment">Background / Basic Syntax</li>
                         <li class="fragment">Features of Javascript (Code Examples)</li>
-                        <li class="fragment">Structured JS, the Netlight way.</li>
                         <li class="fragment">Web Development
                             <ul>
                                 <li class="fragment">JQuery</li>
                                 <li class="fragment">Client vs Server Side</li>
                             </ul>
                         </li>
+                        <li class="fragment">Structured JS, the Netlight way.</li>
                         <li class="fragment">JS IDE:s /Debug JS</li>
                         <li class="fragment">Deploy JS projects</li>
                     </ul>
                 </section>
 
                 <section>
-                    <h2>Background</h2>
-                    <p class="fragment">From Wikipedia:<br/>
-                        "JavaScript (JS) is an open source client-side scripting language
-                        commonly implemented as part of a web browser in order to create
-                        enhanced user interfaces and dynamic websites."</p>
+	                <section>
+	                    <h2>Background</h2>
+	                    <p class="fragment">From Wikipedia:<br/>
+	                        "JavaScript (JS) is an open source client-side scripting language
+	                        commonly implemented as part of a web browser in order to create
+	                        enhanced user interfaces and dynamic websites."</p>
+	                </section>
 
-                </section>
+	                <section>
+	                    <h2>Background</h2>
+	                    <p class="">From Wikipedia:<br/>
+	                        "JavaScript (JS) is an open source <span style="color: red">client-side</span> scripting language
+	                        commonly implemented as part of a web browser in order to create
+	                        enhanced user interfaces and dynamic websites."</p>
+	                </section>
+	            </section>
 
                 <section>
                     <h2>Brendan Eich</h2>
@@ -150,7 +169,7 @@ var log = function(inputVal) {
 		console.log(inputVal);
 		return;
 	}
-	console.log(this.default);	
+	console.log(this.default);
 
 }
 myFunc.default = "Default Value";
@@ -259,7 +278,7 @@ null == undefined   // true
 
 					<section id="events">
 						<h2>Event listeners</h2>
-						<pre class=""><code contenteditable>$('.mySelector').on('click', function() {
+						<pre class=""><code contenteditable>$('.mySelector').on('click', function(event) {
   // React to the click
 });</code></pre>
 						<ul class="fragment">
