--- a/examples/ajax_example.html
+++ b/examples/ajax_example.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Ajax using jQuery</h1>
 
-<button class="ajax_loader_json">Load resource using Ajax</button>
+<button class="ajax_loader_json btn-large">Load resource using Ajax</button>
 <div id="load_json_wrapper" style="display: none;">
 	<h2>Function:</h2>
 	<pre class="function_def"></pre>
@@ -17,7 +17,7 @@
 	<pre class="show_results"></pre>
 </div>
 <hr>
-<button class="ajax_loader_html">Load HTML resource</button>
+<button class="ajax_loader_html btn-large">Load HTML resource</button>
 <div id="load_html_wrapper" style="display: none;">
 	<h2>Function:</h2>
 	<pre class="function_def"></pre>
