--- a/examples/jquery_example.html
+++ b/examples/jquery_example.html
@@ -8,7 +8,7 @@
 <body>
 <h1>jQuery example</h1>
 
-<button id="button1">Action button</button>
+<button id="button1" class="btn-large">Action button</button>
 <h2>Register event handler:</h2>
 <pre class="register_event">$('#button1').on('click', handle_button1_click );</pre>
 
