--- a/examples/jquery_plugin_carousel.html
+++ b/examples/jquery_plugin_carousel.html
@@ -89,7 +89,7 @@
 
 </div>
 
-<button onClick="$(this).hide(); $('#explanation').slideDown();">More...</button>
+<button onClick="$(this).hide(); $('#explanation').slideDown();" class="btn-large">More...</button>
 
 <p style="height:800px">&nbsp;</p>
 
