--- a/presentation/index.html
+++ b/presentation/index.html
@@ -124,7 +124,7 @@
                 <section>
                     <h2>Javascript Is</h2>
 					<ul>
-						<li class="fragment">Object Oreiented</li>
+						<li class="fragment">Object Oriented</li>
 						<li class="fragment">Dynamic</li>
 						<li class="fragment">Functional</li>
 						<li class="fragment">Prototype-based</li>
@@ -307,7 +307,7 @@ null == undefined   // true
 });
 $('.mySelector').trigger('custom_event', ['param1', 'param2']);</code></pre>
 						<span class="mySelector"></span>
-						<button id="run_custom_event">Run code</button>
+						<button id="run_custom_event" class="btn-large">Run code</button>
 						<script type="text/javascript">
 							// alert('Now our custom event happened! param1=' + param1 + ", param2=" + param2);
 							$('#run_custom_event').on('click', function() {
