All table of contents in the same time

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -82,18 +82,18 @@
 
                 <section>
                     <h2>Table of Contents</h2>
-                    <ul>
-                        <li class="fragment">Background / Basic Syntax</li>
-                        <li class="fragment">Features of Javascript (Code Examples)</li>
-                        <li class="fragment">Web Development
+                    <ul class="fragment">
+                        <li class="">Background / Basic Syntax</li>
+                        <li class="">Features of Javascript (Code Examples)</li>
+                        <li class="">Web Development
                             <ul>
-                                <li class="fragment">JQuery</li>
-                                <li class="fragment">Client vs Server Side</li>
+                                <li class="">JQuery</li>
+                                <li class="">Client vs Server Side</li>
                             </ul>
                         </li>
-                        <li class="fragment">Structured JS, the Netlight way.</li>
-                        <li class="fragment">JS IDE:s /Debug JS</li>
-                        <li class="fragment">Deploy JS projects</li>
+                        <li class="">Structured JS, the Netlight way.</li>
+                        <li class="">JS IDE:s /Debug JS</li>
+                        <li class="">Deploy JS projects</li>
                     </ul>
                 </section>
 
